<resources>
    <string name="actividad1">Juega a viste a Pinto según tu rol y explícales a tus compañeros porque has elegido esas prendas y objetos.</string>
    <string name="actividad2">¿En que sitio del yacimiento habría pasado más tiempo tu personaje? Juega al laberinto tomando ese lugar como meta y completa la información proporcionada con lo que recuerdes de la visita.</string>
    <string name="actividad3">Haz equipo con los compañeros de tu clase con los que compartas rol y buscad que cosas os hacían imprescindibles para el funcionamiento de un poblado vacceo. Luego exponed vuestro trabajo a vuestros compañeros.</string>
    <string name="lanzas">Las lanzas eran armas muy populares en mi época. Estaban hechas de madera con una punta de hierro y las usábamos para pelear y cazar animales. Los guerreros las llevábamos en batallas porque eran fuertes y fáciles de usar. Además, las lanzas eran un símbolo de valentía y poder, y solíamos incluirlas en las tumbas de los guerreros para mostrar respeto. Eran herramientas clave en nuestra vida diaria y tradiciones.</string>
    <string name="pulseras">Las pulseras eran adornos muy populares en mi aldea. Las hacíamos con metales como el bronce, el hierro o el oro, y algunas eran muy bonitas con dibujos o formas especiales. No solo servían para decorar, sino también para mostrar nuestro estatus, especialmente los guerreros y personas importantes. Algunas también las usábamos en rituales o ceremonias. Los vacceos creíamos que las pulseras podían traer buena suerte o protección, eran amuletos. Los arqueólogos han encontrado las pulseras que incluíamos en los ajuares funerarios ¡Y parece que les han gustado mucho!</string>
    <string name="azadas">Las azadas eran herramientas muy usadas por nuestros agricultores, principalmente para trabajar la tierra. Las hacíamos de madera y tenían una hoja de piedra o metal. Las utilizábamos para remover la tierra, cavar, y desherbar los cultivos, ayudando en las tareas diarias de la agricultura, como sembrar y preparar el terreno. Las azadas también se empleaban en huertos y campos pequeños. Al ser una herramienta manual, nos permitía asegurarnos personalmente de que la tierra estuviese bien cultivada y lista para la cosecha.</string>
    <string name="copas">Las copas eran uno de los objetos básicos de nuestras vajillas, ¡eran como tu taza favorita! Las fabricábamos de cerámica y, a veces, de metal. Tenían formas sencillas, pero muchas estaban decoradas con dibujos de animales o formas geométricas. Las usábamos para beber, pero también en ceremonias o rituales, como en fiestas o funerales. Algunas copas las metíamos en tumbas, pues creíamos que las iban a necesitar en el más allá. Mi pueblo aprendió a hacer cerámica de una manera muy bonita y única y estoy muy orgulloso de ello.</string>
    <string name="espada">¡Eh, mi espada! Está hecha de hierro, con una hoja recta de doble filo, a mi cuantas más decoraciones bonitas en la empuñadura mejor, mis favoritas son las formas geométricas, pero también hay de animales. Además de para luchar, también son símbolos de poder y riqueza. Los guerreros las llevábamos hasta a la tumba, porque son muy importantes para nosotros. Gracias a nuestra relación con otras culturas sabemos que son similares a las que usaban en otras partes del mundo.</string>
    <string name="fibula">Las fíbulas eran broches de metal que usábamos para sujetar y adornar nuestras vestimentas. Estas piezas, las hacíamos con bronce y otros metales como plata y oro. Cuanto más importante era la persona mejores materiales podía usar. Entre los diseños más populares están las fíbulas anulares hispánicas, con diseño circular. Muchas las decorábamos con diseños geométricos y figurativos, como cabezas de lobo.</string>
    <string name="pendiente">¡Mi pendiente! Vaya, pensé que lo había perdido. Sí, los hombres vacceos también usábamos pendientes. De hecho, hasta nos hacíamos dilataciones por las que hacíamos pasar los pendientes. Los llevábamos no solo para estar más guapos sino también solo para demostrar nuestra clase social a nuestros vecinos. En mi pueblo contábamos con unos artesanos muy hábiles capaces de hacer unas piezas preciosas con varios tipos de metales, estoy muy orgulloso de su trabajo.</string>
    <string name="jarra">¿Sabías que los vacceos hacíamos vino? Para ello necesitábamos jarras. Las jarras se hacían con arcilla y eran lisas, a veces las pintábamos con marrón oscuro haciendo formas geométricas y patrones. El color de los dibujos no era pintura sino óxido, esto lo conseguíamos regulando el nivel de oxígeno dentro de los hornos, a más oxigeno más naranja y a menos oxígeno, más negro. En otros casos usábamos la incisión que se trata de sacar pequeños fragmentos de arcilla con una navaja antes de cocinarlo.</string>
    <string name="canica">CANICAS! Me encantaban mis canicas, las hacíamos con barro y eran muy pequeñas. En algunos casos las decorábamos haciendo uso de diversas técnicas como la impresión, la pintura, el estampado o la talla. De pequeño jugaba con ellas lanzándolas contra cosas y practicando mi puntería.</string>
    <string name="sonajero">Esto es un sonajero, eran recipientes cerrados que contenían bolitas en su interior que producían sonido al agitarlos. Los hacíamos de formas variadas con decoraciones muy originales con figuras geométricas o animales, Para construirlos encerrábamos las bolitas en piezas con arcilla y, a veces, introducíamos polvo para evitar que se pegasen. Al agitarlos sonaban como un sonajero de bebé y  se usaban en rituales para hacer música.</string>
    <string name="caja">Las cajas hechas de cerámica eran comunes en mi pueblo. Los artesanos las creaban con arcillas muy finas. Empezaban con un bloque de barro que cortaban y vaciaban para darle forma. Estas piezas solían ser fuertes y decoradas con dibujos tallados en tres lados, dejando libre el lado con el asa. Muchas cajas tenían forma de animales, como caballos o toros, al modelar sus asas. Mi favorita tiene forma de ciervo.</string>
    <string name="escudo">Los escudos que usábamos en mi pueblo eran redondos, de madera y recubiertos con cuero, para protegernos en combate. Eran de gran tamaño para poder cubrir la mayor parte posible del pueblo. A menudo tenían decoraciones de metal en los bordes para que durasen más. Los diseños con los que decorábamos los escudos eran sencillos para que no dejasen de ser funcionales, algunos podrían incluir diseños personalizados para identificar a los miembros de la tribu o de dioses guerreros.</string>
    <string name="facil">FACIL</string>
    <string name="medio">MEDIO</string>
    <string name="dificil">DIFICIL</string>
    <string name="completado">¡COMPLETADO!</string>
    <string name="muralla">¡Gracias por llevarme a la muralla! Las murallas eran elementos clave en la defensa de mi pueblo y mejoraban la organización del espacio. Los arqueólogos que trabajan en Pintia, han descubierto las estructuras defensivas que nos protegían del exterior y las están dejando preciosas. Nuestras murallas estaban construidas con materiales locales como piedra y tierra, y su función principal era proteger a la comunidad de ataques, especialmente de otros pueblos cercanos o tribus enemigas. ¡No siempre es fácil llevarse bien con el vecino!</string>
    <string name="cenizales">¡Qué mal rollo me dan los cenizales! Aquí es donde realizábamos las quemas, para la destrucción de cadáveres o para rituales. En Pintia, este lugar lo construimos cerca del cementerio de las Ruedas pues cuando terminábamos de quemas a nuestros muertos, enterrábamos los restos junto con objetos importantes. Solo se salvaban de la quema los guerreros, que eran fuertes y valientes y sus cuerpos se ofrecían a los buitres, y los niños pequeños que se enterraban en sus propias casas.</string>
    <string name="pueblo">¡Qué bonito es mi pueblo! Pintia es un asentamiento fortificado, lo construimos con viviendas de planta circular o rectangular. Nos esforzamos mucho para adaptarlas a las necesidades de la vida cotidiana de mis amigos, y organizamos el espacio teniendo en cuenta lo importante que es una buena defensa, aunque también teníamos separaciones según la estructura social. Además, alrededor del poblado teníamos áreas para los artesanos, como los alfareros, que demuestran que éramos una comunidad autosuficiente.</string>
    <string name="necro">¡Pensé que no llegábamos! La necrópolis es fundamental para entender las creencias de mi gente y en ella enterrábamos a nuestros fallecidos. En las tumbas incluíamos ajuares funerarios, formados por armas, joyas y otros objetos, reflejando el estatus social del difunto. También era esencial incluir cosas útiles para su nueva vida después de la muerte como elementos de cocina o “herencias”. Para nosotros no solo eran lugares de enterramiento, sino que también estaban asociados con rituales y ceremonias relacionadas con nuestras creencias religiosas y espirituales.</string>
    <string name="barrio">En Pintia, contábamos con un área exterior dedicada a la alfarería, aquí mis amigos y yo fabricábamos nuestros utensilios y objetos cerámicos. Estos talleres o \"barrios\" eran zonas especializadas, ¡éramos un pueblo bien organizado y muy productivo! Los arqueólogos que estudian a mi pueblo han encontrado fragmentos de cerámica de alta calidad, y han entendido que mi ciudad está llena de personas muy hábiles y talentosas con capacidad para producir objetos útiles, pero también decorativos.</string>
    <string name="pajaro">¡Para nosotros los pájaros tenían un significado especial! Representaban la conexión entre la tierra y el cielo, y pensábamos que podían ayudar a nuestras almas guiándolas hacia otro mundo. Además, veíamos a los pájaros como símbolos de protección y buena suerte, especialmente en tiempos de guerra. Colocábamos dibujos de pájaros en las cerámicas y urnas que usábamos en ceremonias importantes. Así, para mi pueblo, los pájaros eran mucho más que animales; eran símbolos de ayuda y guía espiritual.</string>
    <string name="gallo">Los gallos eran unos animales muy queridos por mi pueblo. ¡Eran mucho más que simples aves! Aparecían en piedras y esculturas que decoraban las tumbas, porque creíamos que ayudaban a las almas de los muertos a viajar al cielo. Como los gallos cantan al amanecer, también simbolizaban el comienzo de un nuevo día, un renacer. Los veíamos como protectores y guías espirituales. A veces, los dibujábamos en objetos como vasijas para los rituales. Este animal representaba la conexión entre la vida y la muerte, y daba fuerza y esperanza a mi gente.</string>
    <string name="caballo">Los caballos eran muy importantes para nosotros. Aparecían en dibujos, piedras y objetos porque eran símbolo de poder y riqueza. Solo los jefes o guerreros importantes teníamos caballos, y a veces nos enterraban con ellos al morir. Los usábamos para pelear en batallas, viajar rápido y trabajar en el campo. En nuestros dibujos, los caballos están junto a guerreros, mostrando lo fuertes que eran juntos. Además, estos animales también tenían un significado especial en las ceremonias y creencias. ¡Eran mucho más que nuestros compañeros!</string>
    <string name="puzzle_button">PUZZLE</string>
    <string name="a1">ACTIVIDAD 1</string>
    <string name="a2">ACTIVIDAD 2</string>
    <string name="a3">ACTIVIDAD 3</string>
    <string name="juegosrol">JUEGOS DEL ROL</string>
    <string name="actividadesrol">ACTIVIDADES DE ROL</string>
    <string name="retomartest">RETOMAR TEST</string>
    <string name="nivelfacil">NIVEL FÁCIL</string>
    <string name="nivelmedio">NIVEL MEDIO</string>
    <string name="niveldificil">NIVEL DIFÍCIL</string>
</resources>