<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#309CA2"
    android:backgroundTint="#309CA2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#EA9037"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/botonAtras"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:backgroundTint="#FFFFFF"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:src="@drawable/flechita"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="100dp"
                    app:layout_gravity="start|top" />

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="100"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/puzzle_button"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/botonAjustes"
                    android:layout_width="60sp"
                    android:layout_height="70sp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:src="@drawable/engranajito"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="100sp"
                    app:layout_gravity="top" />

            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="60sp"
            app:columnCount="1"
            app:rowCount="3" >

            <Button
                android:id="@+id/facil_button"
                android:layout_width="272sp"
                android:layout_height="65sp"
                android:layout_marginTop="40sp"
                android:backgroundTint="#EA9730"
                android:text="@string/nivelfacil"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp"/>

            <Button
                android:id="@+id/medio_button"
                android:layout_width="272sp"
                android:layout_height="65sp"
                android:backgroundTint="#EA9730"
                android:text="@string/nivelmedio"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp"/>

            <Button
                android:id="@+id/dificil_button"
                android:layout_width="272sp"
                android:layout_height="65sp"
                android:layout_marginBottom="40sp"
                android:backgroundTint="#EA9730"
                android:text="@string/niveldificil"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp"/>
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>