<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#309CA2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/botonAtras"
            android:layout_width="60dp"
            android:layout_height="70sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:src="@drawable/flechita"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="100sp"
            app:layout_gravity="start|top" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            app:columnCount="1"
            app:rowCount="3">

            <Button
                android:id="@+id/actividad1Button"
                android:layout_width="290dp"
                android:layout_height="65dp"
                android:backgroundTint="#EA9730"
                android:text="@string/a1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/actividad2Button"
                android:layout_width="290dp"
                android:layout_height="65dp"
                android:backgroundTint="#EA9730"
                android:text="@string/a2"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/actividad3Button"
                android:layout_width="290dp"
                android:layout_height="65dp"
                android:layout_marginBottom="40sp"
                android:backgroundTint="#EA9730"
                android:text="@string/a3"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:iconTint="@color/white"
                app:layout_gravity="center"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

        </androidx.gridlayout.widget.GridLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#EA9037"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/perfilboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/perfilito" />

                <ImageView
                    android:id="@+id/homeboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/casita" />

                <ImageView
                    android:id="@+id/ajustesboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/engranajito" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>