<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#309CA2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/botonAtras"
            android:layout_width="60dp"
            android:layout_height="70sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:src="@drawable/flechita"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="100sp"
            app:layout_gravity="start|top" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:layout_weight="1"
            android:background="#309CA2"
            android:textAlignment="center"
            app:columnCount="1"
            app:rowCount="3">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/actividades"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#EA9730"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/actividadesrol"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:layout_column="0"
                app:layout_gravity="center"
                app:layout_row="1"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/juegos"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#EA9730"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/juegosrol"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="30dp"
                app:elevation="12dp"
                app:layout_column="0"
                app:layout_gravity="center"
                app:layout_row="0"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reiniciar"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:backgroundTint="#EA9730"
                android:fontFamily="sans-serif-black"
                android:text="@string/retomartest"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                app:layout_column="0"
                app:layout_gravity="center"
                app:layout_row="2"
                app:layout_rowWeight="1"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

        </androidx.gridlayout.widget.GridLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#EA9037"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/perfilboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/perfilito" />

                <ImageView
                    android:id="@+id/homeboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/casita" />

                <ImageView
                    android:id="@+id/ajustesboton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EA9037"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/engranajito" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>